added photos to chandelier page

--- a/products/chandelier.html
+++ b/products/chandelier.html
@@ -153,7 +153,7 @@
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <div class="coffee_section layout_padding" >
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -210,11 +210,10 @@
                   <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
-                           <!-- <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/wl4.jpeg"></div>
-                              <h3 class="types_text">WALL LAMPS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
-                           </div> -->
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="./img/chandelier/s2.jpg"></div>
+                              <h3 class="types_text">DL-0044</h3>
+                           </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="./img/chandelier/dl42.jpg"></div>
                               <h3 class="types_text">DL-0042</h3>
@@ -223,11 +222,10 @@
                               <div class="coffee_img"><img src="./img/chandelier/dl43.jpg"></div>
                               <h3 class="types_text">DL-0043</h3>
                            </div>
-                           <!-- <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/3.jpeg"></div>
-                              <h3 class="types_text">STRIP LIGHTS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
-                           </div> -->
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="./img/chandelier/s1.jpg"></div>
+                              <h3 class="types_text">DL-0052</h3>
+                           </div>
                         </div>
                      </div>
                   </div>
@@ -242,6 +240,42 @@
          </div>
       </div>
       <!-- LIGHTS section end -->
+      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+        <!-- <div class="container">
+           <div class="row">
+              <h1 class="coffee_taital">OUR ITEMS</h1>
+              <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
+           </div>
+        </div> -->
+        <div class="coffee_section_2">
+           <div id="main_slider" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                 <div class="carousel-item active">
+                    <div class="container-fluid">
+                       <div class="row">
+                        <div class="col-lg-3 col-md-6">
+                          <div class="coffee_img"><img src="./img/chandelier/s4.jpeg"></div>
+                          <h3 class="types_text">DL-0047</h3>
+                       </div>
+                       <div class="col-lg-3 col-md-6">
+                          <div class="coffee_img"><img src="./img/chandelier/s3.jpeg"></div>
+                          <h3 class="types_text">DL-0045</h3>
+                       </div>
+                          <div class="col-lg-3 col-md-6">
+                             <div class="coffee_img"><img src="./img/chandelier/s5.jpg"></div>
+                             <h3 class="types_text">DL-0048</h3>
+                          </div>
+                          <div class="col-lg-3 col-md-6">
+                           <div class="coffee_img"><img src="./img/chandelier/s6.jpg"></div>
+                           <h3 class="types_text">DL-0049</h3>
+                        </div>
+                       </div>
+                    </div>
+                 </div>
+           </div>
+        </div>
+     </div>
+     <!-- next -->
      
       <!-- footer section start -->
  
