updated floodlight page

--- a/products/flood.html
+++ b/products/flood.html
@@ -217,6 +217,64 @@
          </div>
       </div>
       <!-- LIGHTS section end -->
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/floods/f1.jpeg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 60W</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/floods/f2.jpeg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 100W</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/floods/f3.jpg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 200W</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/floods/f4.jpg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 30W</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- <div class="carousel-item">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wall2_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP </h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wall3_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wall4_edited.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/walls/wl1.jpg"></div>
+                              <h3 class="types_text">WALL LAMP</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div> -->
+               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <i class="fa fa-arrow-left"></i>
+               </a>
+               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+               <i class="fa fa-arrow-right"></i>
+               </a>
+            </div>
+         </div>
+      </div>
+      <!-- LIGHTS section end -->
 
      
       <!-- footer section start -->
