--- a/products/street.html
+++ b/products/street.html
@@ -167,7 +167,7 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/street/ST86.png"></div>
+                              <div class="coffee_img"><img src="img/street/s1.jpeg"></div>
                               <h3 class="types_text">LED STREET LIGHTS </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
