--- a/products/accessories.html
+++ b/products/accessories.html
@@ -18,6 +18,8 @@
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="../css/style.css">
       <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
       <!-- Responsive-->
       <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
@@ -399,11 +401,24 @@
                <div class="col-lg-6 col-sm-12">
                   <div class="footer_social_icon">
                      <ul>
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                     </ul>
+                        <!-- Make sure to replace the phone number with the desired one -->
+                        <li style="display: inline-block; margin-right: 10px;">
+                            <a href="https://api.whatsapp.com/send?phone=254720274567" style="display: block; background-color: #25D366; width: 40px; height: 40px; text-align: center; border-radius: 50%; line-height: 40px; color: #FFFFFF;">
+                                <i class="fa fa-whatsapp" aria-hidden="true" style="font-size: 24px;"></i>
+                            </a>
+                        </li>
+                        <!-- Add other icons here -->
+                        <li style="display: inline-block; margin-right: 10px;">
+                            <a href="#" style="display: block; background-color: #1DA1F2; width: 40px; height: 40px; text-align: center; border-radius: 50%; line-height: 40px; color: #FFFFFF;">
+                                <i class="fa fa-twitter" aria-hidden="true" style="font-size: 24px;"></i>
+                            </a>
+                        </li>
+                        <li style="display: inline-block; margin-right: 10px;">
+                            <a href="#" style="display: block; background-color: #3B5998; width: 40px; height: 40px; text-align: center; border-radius: 50%; line-height: 40px; color: #FFFFFF;">
+                                <i class="fa fa-facebook" aria-hidden="true" style="font-size: 24px;"></i>
+                            </a>
+                        </li>
+                    </ul>
                   </div>
                </div>
             </div>
