done with the ceiling lights page

--- a/products/ceilin.html
+++ b/products/ceilin.html
@@ -152,7 +152,7 @@
       </div>
       <!-- header section end -->
       <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
+      <div class="coffee_section layout_padding" >
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR ITEMS</h1>
@@ -184,7 +184,66 @@
                         </div>
                      </div>
                   </div>
-                  <div class="carousel-item">
+               </div>
+            </div>
+         </div>
+      </div>
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/5.jpeg"></div>
+                              <h3 class="types_text">CL-0014</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n2.jpg"></div>
+                              <h3 class="types_text">CL-XX23</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n1.jpg"></div>
+                              <h3 class="types_text">CL-XX19</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n3.jpg"></div>
+                              <h3 class="types_text">CL-XX22</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- LIGHTS section end -->
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n4.jpg"></div>
+                              <h3 class="types_text">CL-XX21</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n5.jpg"></div>
+                              <h3 class="types_text">CL-XX26</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n6.jpg"></div>
+                              <h3 class="types_text">CL-XX25</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/CEILING/n7.jpg"></div>
+                              <h3 class="types_text">CL-XX24</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
@@ -193,7 +252,7 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  </div> -->
                   <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
@@ -219,12 +278,6 @@
                      </div>
                   </div> -->
                </div>
-               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-               <i class="fa fa-arrow-left"></i>
-               </a>
-               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-               <i class="fa fa-arrow-right"></i>
-               </a>
             </div>
          </div>
       </div>
