--- a/products.html
+++ b/products.html
@@ -204,7 +204,7 @@
                     </div>
                  </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="../about.html">About</a>
+                    <a class="nav-link" href="../about.html">About  Us</a>
                  </li>
                  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown">Support</a>
