updated the info

--- a/about.html
+++ b/about.html
@@ -150,8 +150,8 @@
                         <div class="col-lg-3 col-md-6 footer-contact">
                           <h3>Neelux</h3>
                           <p>
-                            Market Plaza, Shop B-15 <br />
-                            Market Street, Kampala<br />
+                            Hardware City, Shop 234 <br />
+                            Nakasero, Kampala<br />
                             Uganda <br /><br />
                             <strong>Phone:</strong> +256 789 582 546<br />
                             <strong>Email:</strong> teelux.uganda@gmail.com<br />
@@ -247,7 +247,7 @@
             <div class="row">
                <div class="col-lg-6 col-sm-12">
                   <p class="copyright_text">
-                     &copy; 2023 All Rights Reserved. NEELUX
+                     &copy; 2024 All Rights Reserved. NEELUX | Powered by Cosmc Inc
                   </p>
                </div>
                <div class="col-lg-6 col-sm-12">
